/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
import "basecluster/fd/Ping.proto";
import "basecluster/fd/PingReq.proto";
import "basecluster/fd/Ack.proto";
import "basecluster/fd/Nack.proto";
import "basecluster/membership/Join.proto";
import "basecluster/membership/Quit.proto";
import "basecluster/membership/Doubt.proto";
import "basecluster/membership/Fail.proto";
import "basecluster/membership/Endorse.proto";
import "basecluster/agent/AgentMessage.proto";
import "basecrdt/CRDTStoreMessage.proto";

package basecluster;

option java_multiple_files = true;
option java_package = "org.apache.bifromq.basecluster.proto";
option java_outer_classname = "ClusterMessageProtos";
option optimize_for = SPEED;

message ClusterMessage {
  oneof ClusterMessageType {
    fd.Ping ping = 1;
    fd.PingReq pingReq = 2;
    fd.Ack ack = 3;
    fd.Nack nack = 4;
    membership.Join join = 5;
    membership.Quit quit = 6;
    membership.Fail fail = 7;
    membership.Doubt doubt = 8;
    membership.Endorse endorse = 9;
    agent.AgentMessageEnvelope agentMessage = 10;
    basecrdt.CRDTStoreMessage crdtStoreMessage = 11;
  }
}

